[package]
name = "macroquad-jumper"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dependencies.macroquad]
version = "0.3.25"
default-features = false
features = ["audio"]

[dependencies.macroquad-tiled]
version = "0.1.1"
default-features = false
features = []

[dependencies.macroquad-platformer]
version = "0.1.3"
default-features = false
features = []